--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Day1_kotlin">
-        <activity android:name=".tictac_toe.Tictactoe">
+        <activity android:name=".calculator.Calculator">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
-
+        <activity android:name=".tictac_toe.Tictactoe">
         </activity>
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
