--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,21 +12,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Day1_kotlin">
-
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
-
-        <activity android:name=".pkemonGame.PokemonActivity">
+        <activity android:name=".citySunsire.CitySunsireActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".calculator.Calculator">
+        <activity android:name=".zooApp.DetailAnimalActivity" />
+        <activity android:name=".zooApp.ZooActivity">
 
         </activity>
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity android:name=".pkemonGame.PokemonActivity" />
+        <activity android:name=".calculator.Calculator" />
         <activity android:name=".tictac_toe.Tictactoe" />
         <activity android:name=".MainActivity" />
     </application>
